fix height overflow issue

--- a/src/routes/Template.css
+++ b/src/routes/Template.css
@@ -1,3 +1,9 @@
+.template {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .template .steps-button {
   font-family: Helvetica, sans-serif;
   font-size: 15px;
@@ -124,8 +130,7 @@
 }
 
 .template-step-wrapper {
-  height: 600px;
-  max-height: 600px;
+  flex: 1;
   overflow-y: scroll;
 }
 
